# Schedule

./: .gitmodules  CMakeLists.txt  main.cpp
include/: DatabaseManager.hpp  Singleton.hpp  TestController.hpp
include/Controllers/: JsonController.hpp  LoginController.hpp  TestController.hpp
include/Database/: DatabaseManager.hpp
include/Filters/: JwtFilter.hpp
include/Models/: Student.hpp  StudentTask.hpp  Test.hpp
pgconf/: pg_hba.conf  pg_ident.conf
scripts/: generate_models.sh  setup_db.sh  setupdb.sh
sql/: create_tables.sql  setup.sql
src/: DatabaseManager.cpp  TestController.cpp  main.cpp
src/Controllers/: JsonController.cpp  LoginController.cpp  TestController.cpp
src/Database/: DatabaseManager.cpp
src/Filters/: JwtFilter.cpp
src/Models/: Student.cpp  StudentTask.cpp  Test.cpp  model.json
